Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18793

ObfReferenceObject crash happens when loading a driver that is missing registry entries

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • NTCore
    • None

    Description

      ReactOS Version: 0.4.15-dev-5583-g669b2f4

      When loading a driver that requires more than just the service registry entries, an ObfReferenceObject crash happens because of an assert that was placed. I learned of this while debugging CORE-18790 with ThFabba's help.

      Backtrace:

      nt!ObfReferenceObject+0x3c [ntoskrnl\ob\obref.c @ 310]
      nt!PiQueueDeviceAction+0x33 [ntoskrnl\io\pnpmgr\devaction.c @ 2669
      nt!IopInitializeBuiltinDriver+0x55b [ntoskrnl\io\iomgr\driver.c @ 970]
      nt!IopInitializeBootDrivers+0x38b [ntoskrnl\io\iomgr\driver.c @ 1159]
      nt!IoInitSystem+0x3ee [ntoskrnl\io\iomgr\iomgr.c @ 560]
      

      Attachments

        Issue Links

          Activity

            People

              ThFabba ThFabba
              hope2586 hope2586
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: