[NTOS:IO] Handle missing device instance in IopInitializeBuiltinDriver. CORE-18793